# asterisk-docker

./: .env.example  .gitignore  20260630_session.txt  80-ccid.rules  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  asterisk-sms-gateway.plan  asterisk_setup_x86.txt  build-images.sh  build_err.txt  call.amr  charon.pp  charon.te  compose.yaml  config.toml  config.toml.example  db_query.py  debug_asterisk_docker_instructions.txt  devices.toml  memory_20260603.txt  porting_esim_plan.txt  recompile_asterisk_sms.txt  semodules_install.sh  session-2026-05-27.txt  sim_config.py  sim_inventory.db.bak  sms_pdu_watcher.py  start_sim  start_sim_container_config.py  swap_sim_plan.plan  test_cnum.ps1  ui_design.md  usb.pp  usb.te
.github/workflows/: ci.yml  dev_build.yml  rust.yml  tag_release.yml
asterisk/: Dockerfile  Dockerfile.local  Dockerfile.patch  ami_usim.py  charon-logging.conf  entrypoint.sh  ims.updown  rpack_fix.py  send_notification.py  sms_save.py  whisper_transcribe.py
config/example/: ami_usim.ini  telegram_token
contrib/postman/: sms-gateway.postman_collection.json
contrib/systemd/: sms-gateway.service
data/: data.db-shm  data.db-wal
deploy/: .env.example  compose.yaml  setup.sh
doc/postman/: sms-gateway.postman_collection.json
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.svelte  Login.svelte  app.css  main.js
migrations/: 20250121120016_initial.down.sql  20250121120016_initial.up.sql  20250424074325_0.2.sql  20260528000001_calls.sql  20260529000001_calls_recording.sql  20260529000002_calls_transcript.sql  README.md
migrations/sqlite/: 20250118135954_sqlite.down.sql  20250118135954_sqlite.up.sql
pcsc-libs/: libpcsclite.so.1.0.0  libpcsclite_real.so.1.0.0
pcscd/: Dockerfile  entrypoint.sh
remsim/reader.conf.d/: osmo-remsim-client
scripts/: sim_config_gen.py  sim_db.py  sim_docker.py
session/: 2026-0531_session.txt  2026-0601_session.txt  2026-0603_session.txt  2026-530_session.txt  2026_0622_session.txt  session_20260616.txt
sms-gateway/: .gitignore  Cargo.toml  README.md  asterisk_ami_dashboard.plan
sms-gateway/client/: nicegui_app.py
sms-gateway/doc/: DEBUG_CONTRACT.md
sms-gateway/frontend/: .env.example  package-lock.json
src/: config.rs  db.rs  decode.rs  main.rs  modem.rs  transcribe.rs  update.rs  webhook.rs
(+139 files in other folders)
