[package]
name = "sms-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
config = "0.15"
log = "0.4"
flexi_logger = "0.29"
serialport = "4.7"
toml = "0.8"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "chrono",
    "sqlite",
] }
structopt = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
