[package]
name = "sms-gateway"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true       
lto = true        
codegen-units = 1 
panic = "abort"   

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
config = "0.15"
log = "0.4"
flexi_logger = "0.29"
tokio-serial = "5.4"
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "chrono", "sqlite"] }
structopt = "0.3"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"
base64 = "0.22"
rust-embed = "8.0"
mime_guess = "2.0"
hex = "*"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["full"] }
uuid = { version = "1.2", features = ["v4"] }
fancy-regex = "*"
urlencoding = "2.1.3"
futures = "0.3"

[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }

[dev-dependencies]
wiremock = "0.5"
serial_test = "2.0"
